--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Mali:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya&family=Anonymous+Pro&family=Archivo&family=Arvo&family=B612&family=BioRhyme&family=Cairo&family=Cardo&family=Concert+One&family=Cormorant&family=Crimson+Text&family=Exo+2&family=Fira+Sans&family=Fjalla+One&family=Frank+Ruhl+Libre&family=IBM+Plex+Sans&family=Karla&family=Lato&family=Lora&family=Mali&family=Merriweather&family=Montserrat&family=Mulish&family=Noto+Sans&family=Nunito&family=Old+Standard+TT&family=Open+Sans&family=Oswald&family=Oxygen&family=PT+Sans&family=PT+Serif&family=Playfair+Display&family=Poppins&family=Rakkas&family=Roboto&family=Rubik&family=Source+Code+Pro&family=Source+Sans+Pro&family=Spectral&family=Titillium+Web&family=Ubuntu&family=Varela&family=Vollkorn&family=Work+Sans&family=Yatra+One&display=swap"
       rel="stylesheet"
     />
     <style>
@@ -35,6 +35,12 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
+      }
+
+      #root {
+        overflow: hidden;
+        width: 100vw;
+        height: 100vh;
       }
     </style>
     <title>Epub Reader</title>
